--- a/teams.html
+++ b/teams.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Info Bola</title>
+    <title>Title</title>
     <link rel="stylesheet" href="assets/css/materialize.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-icon-72x72.png">
@@ -29,8 +29,8 @@
 <!--Navigasi-->
 <nav class="blue-grey-100" role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" href="/" class="brand-logo">Info Bola</a>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger right">  <i class="material-icons">menu</i></a>
+        <a id="logo-container" href="index.html" class="brand-logo">Info Bola</a>
+        <a href="index.html" data-target="nav-mobile" class="sidenav-trigger left"><i class="material-icons">arrow_back</i></a>
 
         <ul class="topnav right hide-on-med-and-down"></ul>
         <ul id="nav-mobile" class="sidenav"></ul>
@@ -38,12 +38,23 @@
 </nav>
 <!--End-->
 
-<!--Konten-->
 <main>
+    <div class="container">
+        <div class="row" style="margin-top: 20px">
+            <div id="team-info">
+
+
+            </div>
+        </div>
+    </div>
+
+    <div class="fixed-action-btn">
+        <a class="btn-floating btn-large blue-grey-100" id="save">
+            <i class="large material-icons">save</i>
+        </a>
+    </div>
 </main>
-<!--End-->
 
-<script src="assets/js/app.bundle.js" defer></script>
-
+<script src="assets/js/teams.bundle.js" defer></script>
 </body>
 </html>
