--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!--Navigasi-->
 <nav class="blue-grey-100" role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" href="/" class="brand-logo">Info Bola</a>
+        <a id="logo-container" href="#home" class="brand-logo">Info Bola</a>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger right">  <i class="material-icons">menu</i></a>
 
         <ul class="topnav right hide-on-med-and-down"></ul>
