--- a/teams.html
+++ b/teams.html
@@ -41,9 +41,21 @@
 <main>
     <div class="container">
         <div class="row" style="margin-top: 20px">
+            <div id="preloader">
+                <div class="preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div><div class="gap-patch">
+                        <div class="circle"></div>
+                    </div><div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
             <div id="team-info">
-
-
             </div>
         </div>
     </div>
