--- a/teams.html
+++ b/teams.html
@@ -23,6 +23,7 @@
     <meta name="msapplication-TileColor" content="#214252">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#214252">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
